--- a/Nami/Nami.csproj
+++ b/Nami/Nami.csproj
@@ -16,9 +16,10 @@
     <PackageProjectUrl>https://github.com/jiansoft/nami</PackageProjectUrl>
     <RepositoryUrl>https://github.com/jiansoft/nami.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <Version>17.10.12</Version>
-    <AssemblyVersion>17.10.12.0</AssemblyVersion>
-    <FileVersion>17.10.12.0</FileVersion>
+    <Version>17.11.01.3</Version>
+    <AssemblyVersion>17.11.01.3</AssemblyVersion>
+    <FileVersion>17.11.01.3</FileVersion>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
     <Reference Include="System" />
