1. Add a method RightNow that means an action execute right now.

--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -47,4 +47,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Nami\Nami.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
