1. Add a unit test project.

--- a/Nami/Nami.csproj
+++ b/Nami/Nami.csproj
@@ -69,6 +69,9 @@
     <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />-->
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.11.0" />
+  </ItemGroup>
   <!--
   <ItemGroup>
     <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.1" />
