--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -42,7 +42,8 @@
     <Compile Remove="Properties\AssemblyInfo.cs" />
   </ItemGroup>
    <ItemGroup>
-     <PackageReference Include="NLog.Config" Version="4.5.10" />
+     <PackageReference Include="NLog" Version="4.5.11" />
+     <PackageReference Include="NLog.Config" Version="4.5.11" />
    </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Nami\Nami.csproj" />
