1. Add Between model that can limit to execute jobs between a time area.

--- a/Nami/Nami.csproj
+++ b/Nami/Nami.csproj
@@ -20,6 +20,7 @@
     <AssemblyVersion>19.1.31</AssemblyVersion>
     <FileVersion>19.1.31</FileVersion>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageVersion>19.3.26</PackageVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net451|AnyCPU'">
     <DefineConstants>TRACE;DEBUG</DefineConstants>
