--- a/Nami/Nami.csproj
+++ b/Nami/Nami.csproj
@@ -5,7 +5,7 @@
     <Title>Nami</Title>
     <Description>Nami is a high performance C# threading library. This project fork from retlang.</Description>
     <Authors>Eddie</Authors>
-    <TargetFrameworks>net451;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net452</TargetFrameworks>
     <RootNamespace>jIAnSoft.Nami</RootNamespace>
     <AssemblyName>Nami</AssemblyName>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -25,54 +25,23 @@
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net451|AnyCPU'">
     <DefineConstants>TRACE;DEBUG</DefineConstants>
   </PropertyGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net451'">
-    
-    
+
+  <PropertyGroup Condition="'$(TargetFramework)'=='net8.0-windows'">
+    <UseWPF>true</UseWPF>
+  </PropertyGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
     <Reference Include="WindowsBase" />
   </ItemGroup>
-  <!--<ItemGroup>
-  <Reference Include="Microsoft.CSharp" />
-  <Reference Include="System.Data" />
+  <PropertyGroup Condition="'$(TargetFramework)'=='net452'">
+    <UseWPF>true</UseWPF>
+  </PropertyGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net452'">
     <Reference Include="WindowsBase" />
-  </ItemGroup>-->
-     <!--<ItemGroup Condition="'$(TargetFramework)' == 'net461'">
-   <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
-  
-  <ItemGroup>
-    <Compile Remove="Properties\AssemblyInfo.cs" />
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+    <Compile Remove="Fibers\DispatcherFiber.cs" />
+    <Compile Remove="Fibers\DispatcherAdapter.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="WindowsBase" Version="4.6.1055" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System.Windows" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
- -->
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    
-    
-    <!--
-     <PackageReference Include="System.Runtime" Version="4.3.0" />
-    <PackageReference Include="System.Collections.NonGeneric" Version="4.3.0" />
-    <PackageReference Include="System.Dynamic.Runtime" Version="4.3.0" />
-    <PackageReference Include="System.Xml.XmlDocument" Version="4.3.0" />
-     <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.3.0" />
-    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.4.0" />-->
-  </ItemGroup>
-  <!--
-  <ItemGroup>
-    <PackageReference Include="System.Reflection.TypeExtensions" Version="4.5.1" />
-  </ItemGroup>-->
   
 </Project>
