--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>       
-        <TargetFrameworks>net451;netcoreapp2.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net452</TargetFrameworks>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
 
